[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/LangSystem.gd" type="Script" id=2]
[ext_resource path="res://Mini Scenes/Battlefield.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mini Scenes/Alerts.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mini Scenes/Cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/Cannon1.png" type="Texture" id=6]
[ext_resource path="res://Art/Highlight1.png" type="Texture" id=7]
[ext_resource path="res://Art/Cannon2.png" type="Texture" id=8]
[ext_resource path="res://Art/Highlight2.png" type="Texture" id=9]
[ext_resource path="res://Art/Cannon3.png" type="Texture" id=10]
[ext_resource path="res://Art/Highlight3.png" type="Texture" id=11]
[ext_resource path="res://Mini Scenes/Console.tscn" type="PackedScene" id=12]
[ext_resource path="res://Mini Scenes/WeaponTitle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Mini Scenes/Weapon/Laser.tscn" type="PackedScene" id=14]
[ext_resource path="res://Art/EnergyBallIcon.png" type="Texture" id=15]
[ext_resource path="res://Mini Scenes/Weapon/EnergyBall.tscn" type="PackedScene" id=16]
[ext_resource path="res://Mini Scenes/Weapon/ShockW.tscn" type="PackedScene" id=17]
[ext_resource path="res://Mini Scenes/MinionSpawner.tscn" type="PackedScene" id=18]
[ext_resource path="res://Art/ThunderIcon.png" type="Texture" id=19]
[ext_resource path="res://Mini Scenes/Enemies/Hacker.tscn" type="PackedScene" id=20]
[ext_resource path="res://Mini Scenes/Enemies/HackerInit.tscn" type="PackedScene" id=21]
[ext_resource path="res://Mini Scenes/Enemies/RedBlast.tscn" type="PackedScene" id=22]
[ext_resource path="res://Art/Shotgun2.png" type="Texture" id=23]
[ext_resource path="res://Mini Scenes/PhaseManager.tscn" type="PackedScene" id=24]
[ext_resource path="res://Art/MagnetIcon.png" type="Texture" id=25]
[ext_resource path="res://Mini Scenes/Weapon/Magnet.tscn" type="PackedScene" id=26]
[ext_resource path="res://Art/Battlefield3.png" type="Texture" id=27]
[ext_resource path="res://Art/RedBattlefield.png" type="Texture" id=28]
[ext_resource path="res://Art/MissileBlastMid.png" type="Texture" id=29]
[ext_resource path="res://Art/MissileBlastRight.png" type="Texture" id=30]
[ext_resource path="res://Mini Scenes/Weapon/Missile.tscn" type="PackedScene" id=31]
[ext_resource path="res://Art/MissileIcon.png" type="Texture" id=32]

[node name="Main" type="Node"]
script = ExtResource( 1 )
_background_list = [ ExtResource( 27 ), ExtResource( 28 ) ]

[node name="BlackBackground" type="ColorRect" parent="."]
margin_right = 804.0
margin_bottom = 794.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Battlefield" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 0 )

[node name="MinionSpawner" parent="." instance=ExtResource( 18 )]
hacker = ExtResource( 20 )
hacker_init = ExtResource( 21 )
red_blast = ExtResource( 22 )

[node name="LangSystem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PhaseManager" parent="." instance=ExtResource( 24 )]

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 410.188, 627.197 )
scale = Vector2( 0.781053, 0.943096 )
texture = ExtResource( 23 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 435.308, 405.847 )
scale = Vector2( 0.781053, 0.943096 )
texture = ExtResource( 30 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 377.901, 405.959 )
scale = Vector2( 0.781053, 0.943096 )
texture = ExtResource( 30 )
flip_h = true

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( 577.474, 256.8 )
scale = Vector2( 0.781053, 0.943096 )
texture = ExtResource( 29 )
flip_h = true

[node name="Cannon1" parent="." instance=ExtResource( 5 )]
position = Vector2( 410, 739.451 )
sprite = ExtResource( 6 )
highlight = ExtResource( 7 )

[node name="Cannon2" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 480, 740 )
target_lane = 2
sprite = ExtResource( 8 )
highlight = ExtResource( 9 )

[node name="Cannon3" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 623.732, 739.451 )
target_lane = 4
sprite = ExtResource( 10 )
highlight = ExtResource( 11 )

[node name="BlackBackground2" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 794.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueBox2" type="ColorRect" parent="."]
margin_left = 3.11078
margin_top = 335.274
margin_right = 299.111
margin_bottom = 346.274
color = Color( 0.0823529, 0.258824, 0.670588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTitle" parent="." instance=ExtResource( 13 )]
margin_left = 7.89237
margin_top = 606.804
margin_right = -414.107
margin_bottom = -124.196
_weapon = ExtResource( 14 )

[node name="SphereTitle" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 7.52022
margin_top = 554.365
margin_right = -414.479
margin_bottom = -176.635
sprite = ExtResource( 15 )
_weapon = ExtResource( 16 )

[node name="ShockTitle" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 7.45298
margin_top = 502.693
margin_right = -414.546
margin_bottom = -228.307
sprite = ExtResource( 19 )
_weapon = ExtResource( 17 )
_difficulty = 0

[node name="MagnetTitle" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 7.45298
margin_top = 451.114
margin_right = -414.546
margin_bottom = -279.886
sprite = ExtResource( 25 )
_weapon = ExtResource( 26 )
_difficulty = 0

[node name="MissileTitle" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 7.45298
margin_top = 398.628
margin_right = -414.546
margin_bottom = -332.372
sprite = ExtResource( 32 )
_weapon = ExtResource( 31 )
_difficulty = 2

[node name="BlueBox" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 661.691
margin_right = 300.0
margin_bottom = 672.691
color = Color( 0.0823529, 0.258824, 0.670588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" parent="." instance=ExtResource( 12 )]
margin_left = -2.05158
margin_top = 676.017
margin_right = -486.052
margin_bottom = -3.98315

[node name="Alerts" parent="." instance=ExtResource( 4 )]
[connection signal="minion_spawned" from="MinionSpawner" to="." method="_on_MinionSpawner_minion_spawned"]
[connection signal="passed_threshold" from="MinionSpawner" to="." method="_on_MinionSpawner_passed_threshold"]
[connection signal="phase_empty" from="MinionSpawner" to="." method="_on_MinionSpawner_phase_empty"]
[connection signal="send_alert" from="MinionSpawner" to="." method="send_alert"]
[connection signal="damaged" from="Cannon1" to="." method="cannon_damaged"]
[connection signal="damaged" from="Cannon2" to="." method="cannon_damaged"]
[connection signal="damaged" from="Cannon3" to="." method="cannon_damaged"]
[connection signal="command_typed" from="Console" to="." method="_on_Console_command_typed"]
[connection signal="tab_console" from="Console" to="." method="_on_Console_tab_console"]
